Major refactor of entrypoint and add DOMLR flags
